Changed small asthetic details

--- a/login/templates/login/iniciar.html
+++ b/login/templates/login/iniciar.html
@@ -8,7 +8,7 @@
 
 {% block contenido %}
 <div class = "row justify-content-center">
-   <div class = "card col-4 space shadow">
+   <div class = "card bg-dark text-white col-4 space shadow">
        <div class = "card-body">
             <h1 class = "card-title"> Iniciar Sesión </h1>
             <form method = "post" class = "form">
