--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -24,7 +24,7 @@ td a:hover {
     color: white;
 }
 
-.r-click tr:hover {
+.r-click tbody tr:hover {
     background-color: #777777;
 }
 
@@ -62,6 +62,6 @@ td a:hover {
     width: 45%;
 }
 
-.clickable:hover {
+tbody .clickable:hover {
     cursor: pointer;
 }
