--- a/trabajador/templates/agregar_trabajador.html
+++ b/trabajador/templates/agregar_trabajador.html
@@ -26,7 +26,7 @@
             </div>
 
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos Personales</h4>
                 </div>
@@ -38,7 +38,7 @@
                             </label>
                             {{form.paterno}}
                             {% for error in form.paterno.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -49,7 +49,7 @@
                             </label>
                             {{form.materno}}
                             {% for error in form.materno.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -60,7 +60,7 @@
                             </label>
                             {{form.nombre}}
                             {% for error in form.nombre.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -71,7 +71,7 @@
                             </label>
                             {{form.rfc}}
                             {% for error in form.rfc.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -85,7 +85,7 @@
                             </label>
                             {{form.curp}}
                             {% for error in form.curp.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -102,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos de Residencia</h4>
                 </div>
@@ -114,7 +114,7 @@
                             </label>
                             {{form.pais_residencia}}
                             {% for error in form.pais_residencia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -125,7 +125,7 @@
                             </label>
                             {{form.estado_residencia}}
                             {% for error in form.estado_residencia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -136,7 +136,7 @@
                             </label>
                             {{form.municipio_residencia}}
                             {% for error in form.municipio_residencia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -150,7 +150,7 @@
                             </label>
                             {{form.calle}}
                             {% for error in form.calle.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -161,7 +161,7 @@
                             </label>
                             {{form.numero}}
                             {% for error in form.numero.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -172,7 +172,7 @@
                             </label>
                             {{form.colonia}}
                             {% for error in form.colonia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -186,7 +186,7 @@
                             </label>
                             {{form.cp}}
                             {% for error in form.cp.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -197,7 +197,7 @@
                             </label>
                             {{form.telefono}}
                             {% for error in form.telefono.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -208,7 +208,7 @@
                             </label>
                             {{form.email}}
                             {% for error in form.email.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -217,7 +217,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos Laborales</h4>
                 </div>
@@ -230,7 +230,7 @@
                             </label>
                             {{form.matricula_administrativo}}
                             {% for error in form.matricula_administrativo.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -241,7 +241,7 @@
                             </label>
                             {{form.matricula_gremial}}
                             {% for error in form.matricula_gremial.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -250,7 +250,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos Academicos</h4>
                 </div>
@@ -263,7 +263,7 @@
                             </label>
                             {{form.grado_max_estudios}}
                             {% for error in form.grado_max_estudios.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -272,7 +272,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos de ISSSTE</h4>
                 </div>
@@ -285,7 +285,7 @@
                             </label>
                             {{form.nss}}
                             {% for error in form.nss.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -296,7 +296,7 @@
                             </label>
                             {{form.no_issste}}
                             {% for error in form.no_issste.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
