--- a/usuario/templates/ver_usuario.html
+++ b/usuario/templates/ver_usuario.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos del usuario</h4>
                 </div>
@@ -99,18 +99,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="d-flex flex-row-reverse mr-3 mb-3 mt-2">
+                    <button
+                        onClick="javascript:history.go(-1);"
+                        class="btn btn-secondary ml-2 border"
+                    >
+                        Regresar
+                    </button>
+                    <a href="{% url "eliminar_usuario" usuario.id %}" class="btn btn-danger ml-2">Eliminar</a>
+                    <a href="{% url "modificar_usuario" usuario.id %}" class="btn btn-primary">Editar</a>
+                </div>
             </div>
 
-            <div class="d-flex flex-row-reverse">
-                <button
-                    onClick="javascript:history.go(-1);"
-                    class="btn btn-secondary mb-3 ml-2"
-                >
-                    Regresar
-                </button>
-                <a href="{% url "eliminar_usuario" usuario.id %}" class="btn btn-danger mb-3 ml-2">Eliminar</a>
-                <a href="{% url "modificar_usuario" usuario.id %}" class="btn btn-primary mb-3">Editar</a>
-            </div>
         </div>
     </div>
 
