--- a/trabajador/templates/modificar_trabajador.html
+++ b/trabajador/templates/modificar_trabajador.html
@@ -26,7 +26,7 @@
             </div>
 
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos Personales</h4>
                 </div>
@@ -38,7 +38,7 @@
                             </label>
                             {{form.paterno}}
                             {% for error in form.paterno.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -49,7 +49,7 @@
                             </label>
                             {{form.materno}}
                             {% for error in form.materno.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -60,7 +60,7 @@
                             </label>
                             {{form.nombre}}
                             {% for error in form.nombre.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -71,7 +71,7 @@
                             </label>
                             {{form.rfc}}
                             {% for error in form.rfc.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -85,7 +85,7 @@
                             </label>
                             {{form.curp}}
                             {% for error in form.curp.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -105,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos de Residencia</h4>
                 </div>
@@ -117,7 +117,7 @@
                             </label>
                             {{form.pais_residencia}}
                             {% for error in form.pais_residencia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -128,7 +128,7 @@
                             </label>
                             {{form.estado_residencia}}
                             {% for error in form.estado_residencia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -139,7 +139,7 @@
                             </label>
                             {{form.municipio_residencia}}
                             {% for error in form.municipio_residencia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -153,7 +153,7 @@
                             </label>
                             {{form.calle}}
                             {% for error in form.calle.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -164,7 +164,7 @@
                             </label>
                             {{form.numero}}
                             {% for error in form.numero.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -175,7 +175,7 @@
                             </label>
                             {{form.colonia}}
                             {% for error in form.colonia.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -189,7 +189,7 @@
                             </label>
                             {{form.cp}}
                             {% for error in form.cp.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -200,7 +200,7 @@
                             </label>
                             {{form.telefono}}
                             {% for error in form.telefono.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -211,7 +211,7 @@
                             </label>
                             {{form.email}}
                             {% for error in form.email.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -220,7 +220,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos Laborales</h4>
                 </div>
@@ -233,7 +233,7 @@
                             </label>
                             {{form.matricula_administrativo}}
                             {% for error in form.matricula_administrativo.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -244,7 +244,7 @@
                             </label>
                             {{form.matricula_gremial}}
                             {% for error in form.matricula_gremial.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -253,7 +253,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos Academicos</h4>
                 </div>
@@ -266,7 +266,7 @@
                             </label>
                             {{form.grado_max_estudios}}
                             {% for error in form.grado_max_estudios.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -275,7 +275,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card text-white bg-dark mb-3 shadow">
                 <div class="card-header">
                     <h4 class="card-title mb-0">Datos de ISSSTE</h4>
                 </div>
@@ -288,7 +288,7 @@
                             </label>
                             {{form.nss}}
                             {% for error in form.nss.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -299,7 +299,7 @@
                             </label>
                             {{form.no_issste}}
                             {% for error in form.no_issste.errors %}
-                                <p class="text-danger text-center">
+                                <p class="text-warning text-center">
                                     {{error}}
                                 </p>
                             {% endfor %}
