--- a/usuario/templates/agregar_usuario.html
+++ b/usuario/templates/agregar_usuario.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 shadow">
+            <div class="card bg-dark text-white mb-3 shadow">
                 <div class="card-header mb-3">
                     <h4 class="card-title mb-0">Datos del Nuevo Usuario</h4>
                 </div>
@@ -34,7 +34,7 @@
                             </label>
                             {{form.first_name}}
                             {% for error in form.first_name.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -47,7 +47,7 @@
                             </label>
                             {{form.last_name}}
                             {% for error in form.last_name.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -60,7 +60,7 @@
                             </label>
                             {{form.materno}}
                             {% for error in form.materno.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -73,7 +73,7 @@
                             </label>
                             {{form.username}}
                             {% for error in form.username.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -86,7 +86,7 @@
                             </label>
                             {{form.email}}
                             {% for error in form.email.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -99,7 +99,7 @@
                             </label>
                             {{form.password1}}
                             {% for error in form.password1.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -112,7 +112,7 @@
                             </label>
                             {{form.password2}}
                             {% for error in form.password2.errors %}
-                                <p class="text-danger text-center pb-0 mb-0">
+                                <p class="text-warning text-center pb-0 mb-0">
                                     {{error}}
                                 </p>
                             {% endfor %}
@@ -122,18 +122,17 @@
                         <div class="col-11">
                             <div class="form-inline justify-content-center mb-3 mt-1">
                                 {{form.is_superuser}}
-                                <label class="form-check-label text-primary" for="id_is_superuser">
+                                <label class="form-check-label" for="id_is_superuser">
                                     {{form.is_superuser.label}}
                                 </label>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="d-flex flex-row-reverse mb-3">
-                <a href="{% url "lista_usuario" %}" class="btn btn-secondary ml-2">Cancelar</a>
-                <button type="submit" class="btn btn-primary">Agregar</button>
+                <div class="d-flex flex-row-reverse mb-3 mr-3 mt-2">
+                    <a href="{% url "lista_usuario" %}" class="btn btn-secondary ml-2 border">Cancelar</a>
+                    <button type="submit" class="btn btn-primary">Agregar</button>
+                </div>
             </div>
         </div>
     </div>
