--- a/usuario/templates/modificar_usuario.html
+++ b/usuario/templates/modificar_usuario.html
@@ -9,12 +9,12 @@
 
                     <div class="row">
                         <div class="col">
-                            <h1 class="card-title text-primary">Modificar Usuario</h1>
+                            <h1 class="card-title">Modificar Usuario</h1>
                         </div>
                     </div>
         
                     
-                    <div class="card mb-3 shadow">
+                    <div class="card bg-dark text-white mb-3 shadow">
                         <div class="card-header">
                             <h4 class="card-title mb-0">{{usuario.first_name}} {{usuario.last_name}} {{usuario.materno}}</h4>
                         </div>
@@ -26,7 +26,7 @@
                                     </label>
                                     {{form.username}}
                                     {% for error in form.username.errors %}
-                                        <p class="text-danger text-center pb-0 mb-0">
+                                        <p class="text-warning text-center pb-0 mb-0">
                                             {{error}}
                                         </p>
                                     {% endfor %}
@@ -39,7 +39,7 @@
                                     </label>
                                     {{form.email}}
                                     {% for error in form.email.errors %}
-                                        <p class="text-danger text-center">
+                                        <p class="text-warning text-center">
                                             {{error}}
                                         </p>
                                     {% endfor %}
@@ -49,24 +49,24 @@
                                 <div class="form-group col-md-11">
                                     <div class="form-inline justify-content-center">
                                         {{form.is_superuser}}
-                                        <label class="form-check-label text-secondary" for="id_is_superuser">
+                                        <label class="form-check-label" for="id_is_superuser">
                                             {{form.is_superuser.label}}
                                         </label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-row justify-content-center mb-3">
-                                <a href="{% url "cambiar_contrasena" usuario.id %}" class="text-primary">
+                                <a href="{% url "cambiar_contrasena" usuario.id %}" class="btn btn-dark">
                                     Cambiar contraseña
                                 </a>
                             </div>
                         </div>
+                        <div class="d-flex flex-row-reverse mb-3 mr-3 mt-2">
+                            <a href="{% url "lista_usuario" %}" class="btn btn-secondary ml-2 border">Cancelar</a>
+                            <button type="submit" class="btn btn-primary">Actualizar</button>
+                        </div>
                     </div>
         
-                    <div class="d-flex flex-row-reverse">
-                        <a href="{% url "lista_usuario" %}" class="btn btn-secondary ml-2">Cancelar</a>
-                        <button type="submit" class="btn btn-primary">Actualizar</button>
-                    </div>
                 </div>
             </div>
 
