Fixed small details on views

--- a/trabajador/templates/ver_trabajador.html
+++ b/trabajador/templates/ver_trabajador.html
@@ -57,11 +57,11 @@
                 <table class="table table-dark table-sm text-center shadow rounded-lg">
                     <thead class="">
                         <tr>
-                            <th class="border-top-0" colspan="2"><small><b>Historial de Registro</b></small></th>
+                            <th class="border-top-0" colspan="2"><small><b>Historial de Cambios</b></small></th>
                         </tr>
                         <tr>
                             <th scope="col"><small><b>Usuario</b></small></th>
-                            <th scope="col"><small><b>Fecha de Actualizacion</b></small></th>
+                            <th scope="col"><small><b>Fecha de Cambio</b></small></th>
                         </tr>
                     </thead>
                     <tbody>
