--- a/usuario/templates/agregar_usuario.html
+++ b/usuario/templates/agregar_usuario.html
@@ -56,7 +56,7 @@
                     <div class="form-row justify-content-center">
                         <div class="form-group col-11">
                             <label for="id_materno">
-                                {{form.materno.label}}
+                                *{{form.materno.label}}
                             </label>
                             {{form.materno}}
                             {% for error in form.materno.errors %}
