Correccion minima visual

--- a/trabajador/templates/ver_trabajador.html
+++ b/trabajador/templates/ver_trabajador.html
@@ -79,7 +79,7 @@
             {% else %}
 
             <div class="col-md-3 mt-3 text-center">
-                <h4>No hay historial de actualizaciones disponible</h4>
+                <h4>No hay historial de cambios</h4>
             </div>
             {% endif %}
                 
