--- a/trabajador/templates/base.html
+++ b/trabajador/templates/base.html
@@ -23,7 +23,7 @@
             <ul class="navbar-nav mr-auto">
                 {% if user.is_authenticated %}
                     <li class="nav-item {% if actual == 'trabajador' %} active {% endif %}">
-                        <a class="nav-link" href="{% if actual == 'trabajador' %}#{% else %}{% url 'lista_trabajador' %}{% endif %}">Trabajadores</a>
+                        <a class="nav-link" href="{% url 'lista_trabajador' %}">Trabajadores</a>
                     </li>
                     {% if user.is_superuser %}    
                     <li class="nav-item {% if actual == 'usuario' %} active {% endif %}">
